REST APIの既読機能追加
