# backend/api/gen/oas_client_gen.go
@@ -58,6 +58,12 @@ type Invoker interface {
 	//
 	// POST /login
 	LoginPost(ctx context.Context, request *LoginRequest) (LoginPostRes, error)
+	// MarkMessageAsRead invokes markMessageAsRead operation.
+	//
+	// メッセージを既読として登録.
+	//
+	// POST /messages/{message_id}/read
+	MarkMessageAsRead(ctx context.Context, params MarkMessageAsReadParams) (MarkMessageAsReadRes, error)
 	// MessagesGet invokes GET /messages operation.
 	//
 	// Get messages with a user.
@@ -488,6 +494,97 @@ func (c *Client) sendLoginPost(ctx context.Context, request *LoginRequest) (res 
 
 	stage = "DecodeResponse"
 	result, err := decodeLoginPostResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// MarkMessageAsRead invokes markMessageAsRead operation.
+//
+// メッセージを既読として登録.
+//
+// POST /messages/{message_id}/read
+func (c *Client) MarkMessageAsRead(ctx context.Context, params MarkMessageAsReadParams) (MarkMessageAsReadRes, error) {
+	res, err := c.sendMarkMessageAsRead(ctx, params)
+	return res, err
+}
+
+func (c *Client) sendMarkMessageAsRead(ctx context.Context, params MarkMessageAsReadParams) (res MarkMessageAsReadRes, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("markMessageAsRead"),
+		semconv.HTTPRequestMethodKey.String("POST"),
+		semconv.HTTPRouteKey.String("/messages/{message_id}/read"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(elapsedDuration)/float64(time.Millisecond), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, MarkMessageAsReadOperation,
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [3]string
+	pathParts[0] = "/messages/"
+	{
+		// Encode "message_id" parameter.
+		e := uri.NewPathEncoder(uri.PathEncoderConfig{
+			Param:   "message_id",
+			Style:   uri.PathStyleSimple,
+			Explode: false,
+		})
+		if err := func() error {
+			return e.EncodeValue(conv.IntToString(params.MessageID))
+		}(); err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		encoded, err := e.Result()
+		if err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		pathParts[1] = encoded
+	}
+	pathParts[2] = "/read"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "POST", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeMarkMessageAsReadResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
