# backend/api/gen/oas_operations_gen.go
@@ -11,6 +11,7 @@ const (
 	GetChatRoomsOperation        OperationName = "GetChatRooms"
 	GetMeOperation               OperationName = "GetMe"
 	LoginPostOperation           OperationName = "LoginPost"
+	MarkMessageAsReadOperation   OperationName = "MarkMessageAsRead"
 	MessagesGetOperation         OperationName = "MessagesGet"
 	MessagesPostOperation        OperationName = "MessagesPost"
 	SignupPostOperation          OperationName = "SignupPost"
